--- a/.github/workflows/setup_statestore.yml
+++ b/.github/workflows/setup_statestore.yml
@@ -54,14 +54,12 @@ jobs:
             echo "*** Ok"
           fi
 
-          echo "*** Check if Storage Container tfstate exists"
-          CONTAINER_NAME = "tfstate"
-          
+          echo "*** Check if Storage Container tfstate exists"         
           key="$(az storage account keys list -n $STORAGE_ACCOUNT_NAME --query "[0].{value:value}" --output tsv)"
 
-          if [ $(az storage container exists --name $CONTAINER_NAME --account-name $STORAGE_ACCOUNT_NAME --account-key $key = false ]; then 
+          if [ $(az storage container exists --name tfstate --account-name $STORAGE_ACCOUNT_NAME --account-key $key = false ]; then 
             echo "*** WARN! Storage container tfstate does not exist. Creating..."
-            az storage container create --name $CONTAINER_NAME \
+            az storage container create --name tfstate \
                                     --account-name $STORAGE_ACCOUNT_NAME \
                                     --public-access off \
                                     --account-key $key
