--- a/.github/workflows/setup_statestore.yml
+++ b/.github/workflows/setup_statestore.yml
@@ -34,46 +34,12 @@ jobs:
       - name: 'Run az commands'
         shell: pwsh
         run: |
-          # echo "*** Check if Resource Group $RESOURCE_GROUP_NAME exists"
-          # if [ $(az group exists --name $RESOURCE_GROUP_NAME) = false ]; then 
-          #   echo "*** WARN! Resource Group $RESOURCE_GROUP_NAME does not exist. Creating..."
-          #   az group create --name $RESOURCE_GROUP_NAME --location "$RESOURCE_LOCATION" 
-          # else
-          #   echo "*** Ok"
-          # fi
-
-          # echo "*** Check if Storage Account $STORAGE_ACCOUNT_NAME exists"
-          # if [[ $(az storage account list --resource-group $RESOURCE_GROUP_NAME --query "[?name=='$STORAGE_ACCOUNT_NAME'] | length(@)") == 0 ]]; then
-          #   echo "*** WARN! Storage account $STORAGE_ACCOUNT_NAME does not exist. Creating..."
-          #   az storage account create --name $STORAGE_ACCOUNT_NAME \
-          #                 --resource-group $RESOURCE_GROUP_NAME \
-          #                 --https-only true \
-          #                 --sku Standard_LRS \
-          #                 --min-tls-version TLS1_2
-          # else
-          #   echo "*** Ok"
-          # fi
-
-          # echo "*** Check if Storage Container tfstate exists"         
-          # key="$(az storage account keys list -n $STORAGE_ACCOUNT_NAME --query "[0].{value:value}" --output tsv)"
-
-          # if [ $(az storage container exists --name tfstate --account-name $STORAGE_ACCOUNT_NAME --account-key $key) == "False" ]; then 
-          #   echo "*** WARN! Storage container tfstate does not exist. Creating..."
-          #   az storage container create --name tfstate \
-          #                           --account-name $STORAGE_ACCOUNT_NAME \
-          #                           --public-access off \
-          #                           --account-key $key
-          # else
-          #   echo "*** Ok"
-          # fi
-
-
-          echo "*** Check if Resource Group $RESOURCE_GROUP_NAME exists"
-          $checkRg = az group exists --name $RESOURCE_GROUP_NAME | ConvertFrom-Json
+          echo "*** Check if Resource Group ${env:RESOURCE_GROUP_NAME} exists"
+          $checkRg = az group exists --name ${env:RESOURCE_GROUP_NAME} | ConvertFrom-Json
           if (!$checkRg) {
-            Write-Warning "*** WARN! Resource Group $RESOURCE_GROUP_NAME does not exist. Creating..."
+            Write-Warning "*** WARN! Resource Group ${env:RESOURCE_GROUP_NAME} does not exist. Creating..."
 
-            az group create --name $RESOURCE_GROUP_NAME --location "$RESOURCE_LOCATION"
+            az group create --name ${env:RESOURCE_GROUP_NAME} --location "${env:RESOURCE_LOCATION}"
             if ($LastExitCode -ne 0) {
               throw "*** Error - could not create resource group"
             }
@@ -82,13 +48,13 @@ jobs:
           {
             echo "*** Ok"
           }
-          echo "*** Check if Storage Account $STORAGE_ACCOUNT_NAME exists"
-          $check = az storage account show --name $STORAGE_ACCOUNT_NAME `
-                                          --resource-group $RESOURCE_GROUP_NAME | ConvertFrom-Json
+          echo "*** Check if Storage Account ${env:STORAGE_ACCOUNT_NAME} exists"
+          $check = az storage account show --name ${env:STORAGE_ACCOUNT_NAME} `
+                                          --resource-group ${env:RESOURCE_GROUP_NAME} | ConvertFrom-Json
           if (!$check) {
-            Write-Warning "*** WARN! Storage Account $STORAGE_ACCOUNT_NAME does not exist. Creating..."
-            az storage account create --name $STORAGE_ACCOUNT_NAME `
-                                      --resource-group $RESOURCE_GROUP_NAME `
+            Write-Warning "*** WARN! Storage Account ${env:STORAGE_ACCOUNT_NAME} does not exist. Creating..."
+            az storage account create --name ${env:STORAGE_ACCOUNT_NAME} `
+                                      --resource-group ${env:RESOURCE_GROUP_NAME} `
                                       --https-only true `
                                       --sku Standard_GZRS `
                                       --min-tls-version TLS1_2
