--- a/.github/workflows/setup_statestore.yml
+++ b/.github/workflows/setup_statestore.yml
@@ -22,8 +22,8 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      RESOURCE_GROUP_NAME: 'RG-TF-STATE-001-DEV'
-      STORAGE_ACCOUNT_NAME: 'stmoclocaldev01'
+      RESOURCE_GROUP_NAME: ${{ secrets.TF_RESOURCE_GROUP }}
+      STORAGE_ACCOUNT_NAME: ${{ secrets.TF_STORAGE_ACCOUNT }}
 
     steps:
       - name: 'Az CLI login'
