--- a/.github/workflows/deploy_foundation.yml
+++ b/.github/workflows/deploy_foundation.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   deploy:
-    runs-on: linux
+    runs-on: ubuntu-latest
 
     environment: ${{ github.event.inputs.environment }}
 
