--- a/.github/workflows/setup_statestore.yml
+++ b/.github/workflows/setup_statestore.yml
@@ -14,13 +14,15 @@ env:
 jobs:
   deploy-test:
     uses: ./.github/workflows/workflow_setup_statestore.yml
-    environment: 'test'
+    with: 
+      environment: 'test'
     secrets: inherit
 
   deploy-prod:
     uses: ./.github/workflows/workflow_setup_statestore.yml
     needs: [deploy-test]
-    environment: 'prod'
+    with: 
+      environment: 'prod'
     secrets: inherit
     
 
