--- a/.github/workflows/workflow_setup_statestore.yml
+++ b/.github/workflows/workflow_setup_statestore.yml
@@ -11,7 +11,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     
-    environment: ${{ input.environment }}
+    environment: ${{ inputs.environment }}
 
     env: 
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
