--- a/.github/workflows/setup_statestore_prod.yml
+++ b/.github/workflows/setup_statestore_prod.yml
@@ -8,6 +8,7 @@ env:
 
 jobs:
   deploy:
+    name: PROD
     uses: ./.github/workflows/workflow_setup_statestore.yml
     with: 
       environment: 'prod'
