--- a/.github/workflows/setup_statestore-int.yml
+++ b/.github/workflows/setup_statestore-int.yml
@@ -8,6 +8,7 @@ env:
 
 jobs:
   deploy:
+    name: Deploy INT
     uses: ./.github/workflows/workflow_setup_statestore.yml
     with: 
       environment: 'test'
