--- a/.github/workflows/setup_statestore-int.yml
+++ b/.github/workflows/setup_statestore-int.yml
@@ -12,6 +12,8 @@ jobs:
     uses: ./.github/workflows/_template_setup_statestore.yml
     with: 
       environment: 'test'
+      resource_group: 'rg-moc-tfstate-we-dev-001'
+      storage_account: 'stmoctfstatedev001'
     secrets: inherit
     
 
