--- a/.github/workflows/_template_deploy_foundation.yml
+++ b/.github/workflows/_template_deploy_foundation.yml
@@ -6,7 +6,13 @@ on:
       environment:
         required: true
         type: string
-      tfvar:
+      tfvar_file:
+        required: true
+        type: string
+      resource_group:
+        required: true
+        type: string
+      storage_account:
         required: true
         type: string
       container_name:
@@ -16,24 +22,17 @@ on:
         required: true
         type: string
 
-env:
-  TF_CONTAINER_NAME: 'tfstate'
-  TF_STATE_FILE: 'foundation.tfstate'
-
 jobs:
   terraform-apply:
     runs-on: ubuntu-latest
 
-    environment: ${{ github.event.inputs.environment }}
+    environment: ${{ inputs.environment }}
 
     env: 
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      TF_RESOURCE_GROUP: ${{ secrets.TF_RESOURCE_GROUP }}
-      TF_STORAGE_ACCOUNT: ${{ secrets.TF_STORAGE_ACCOUNT }}
-      TF_CONTAINER_NAME: ${{ .TF_STORAGE_ACCOUNT }}
 
     defaults:
       run:
@@ -53,10 +52,10 @@ jobs:
         id: init
         run: |
           terraform init \
-            -backend-config="resource_group_name=$TF_RESOURCE_GROUP" \
-            -backend-config="storage_account_name=$TF_STORAGE_ACCOUNT" \
-            -backend-config="container_name=$TF_CONTAINER_NAME" \
-            -backend-config="key=$TF_STATE_FILE"
+            -backend-config="resource_group_name=${{ inputs.resource_group }}" \
+            -backend-config="storage_account_name=${{ inputs.storage_account }}" \
+            -backend-config="container_name=${{ inputs.container_name }}" \
+            -backend-config="key=${{ inputs.state_file }}"
 
       - name: Terraform fmt
         id: fmt
@@ -69,11 +68,8 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -out output.tfplan
+        run: terraform plan -no-color -out output.tfplan -var-file="${{ inputs.tfvar_file }}"
       
       - name: Terraform Apply
         id: apply
         run: terraform apply output.tfplan
-
-  call-workflow-2-in-local-repo:
-    uses: ./.github/workflows/workflow_foundation.yml
