--- a/.github/workflows/_template_deploy_foundation.yml
+++ b/.github/workflows/_template_deploy_foundation.yml
@@ -1,7 +1,7 @@
 name: _template_deploy_foundation
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       environment:
         required: true
