--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,8 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+name: '$(BuildDefinitionName).$(DayOfYear)$(Rev:.r)'
+
 trigger:
 - main
 
