--- a/.azure-pipelines/azure-pipeline-release.yml
+++ b/.azure-pipelines/azure-pipeline-release.yml
@@ -7,12 +7,14 @@
 trigger:
 - main
 
+pr: none
+
 pool:
   vmImage: ubuntu-latest
 
 steps:
 - script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  displayName: 'Run deployment script'
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
