--- a/.azure-pipelines/azure-pipelines-ci.yml
+++ b/.azure-pipelines/azure-pipelines-ci.yml
@@ -3,15 +3,14 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-trigger:
-- main
+trigger: none
 
 pool:
   vmImage: ubuntu-latest
 
 steps:
 - script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  displayName: 'Run build script'
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
