--- a/.azure-pipelines/azure-pipelines-ci.yml
+++ b/.azure-pipelines/azure-pipelines-ci.yml
@@ -1,18 +1,10 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger: none
-
-pool:
-  vmImage: ubuntu-latest
-
-steps:
-- script: echo Hello, world!
-  displayName: 'Run build script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+  
+jobs:
+- template: 'templates/build.yml'
+  parameters:
+    publish_artifact_contents: |
+                              .terraform.lock.hcl
+                              *.tf
+                              modules/**
+  
