--- a/.azure-pipelines/templates/build.yml
+++ b/.azure-pipelines/templates/build.yml
@@ -38,7 +38,7 @@ jobs:
   - template: tasks/terraform-using-ssh-modules.yml
     parameters:
       module_sources_type: 'ssh'
-  - template: tasks/github-terraform-private-modules.yml
+  # - template: tasks/github-terraform-private-modules.yml
   - template: tasks/pre-commit-tools-install.yml
   - template: tasks/install-unzip.yml
   - template: tasks/terraform-tools-install.yml
