--- a/.azure-pipelines/templates/build.yml
+++ b/.azure-pipelines/templates/build.yml
@@ -35,17 +35,17 @@ jobs:
     -group: terraform-private-modules
   steps:
   - template: tasks/checkout-self-repository.yml
-  - template: tasks/terraform-using-ssh-modules.yml
-    parameters:
-      module_sources_type: 'ssh'
+  # - template: tasks/terraform-using-ssh-modules.yml
+  #   parameters:
+  #     module_sources_type: 'ssh'
   # - template: tasks/github-terraform-private-modules.yml
   - template: tasks/pre-commit-tools-install.yml
   - template: tasks/install-unzip.yml
   - template: tasks/terraform-tools-install.yml
   - template: tasks/pre-commit-tools-run.yml
-  - template: tasks/terraform-using-ssh-modules.yml
-    parameters:
-      module_sources_type: 'https'
+  # - template: tasks/terraform-using-ssh-modules.yml
+  #   parameters:
+  #     module_sources_type: 'https'
   - template: tasks/artefacts-publish.yml
     parameters:
       publish_artifact_name: ${{ parameters.publish_artifact_name }}
