Update build job

--- a/.azure-pipelines/azure-pipelines-ci.yml
+++ b/.azure-pipelines/azure-pipelines-ci.yml
@@ -1,10 +1,15 @@
 trigger: none
-  
-jobs:
-- template: 'templates/build.yml'
-  parameters:
-    publish_artifact_contents: |
-                              .terraform.lock.hcl
-                              *.tf
-                              modules/**
+
+
+
+stages:
+- stage: build
+  displayName: Build stage
+  jobs:
+  - template: 'templates/build.yml'
+    parameters:
+      publish_artifact_contents: |
+                                .terraform.lock.hcl
+                                *.tf
+                                modules/**
   
